fixed a margin spacing issue on the portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ Portfolio Page
 	position: relative;
 	width: 100%;
 	max-width: 400px;
+	margin: auto;
 	margin-bottom: 5%;
 }
 
